// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`move-media should handle moving non-existent media 1`] = `
{
  "content": [
    {
      "text": "Error using move-media:
{
  "message": "Request failed with status code 404",
  "response": {
    "type": "Error",
    "title": "The content could not be found",
    "status": 404,
    "operationStatus": "NotFound"
  }
}",
      "type": "text",
    },
  ],
}
`;

exports[`move-media should handle moving to non-existent target 1`] = `
{
  "content": [
    {
      "text": "Error using move-media:
{
  "message": "Request failed with status code 404",
  "response": {
    "type": "Error",
    "title": "The targeted content parent could not be found",
    "status": 404,
    "operationStatus": "ParentNotFound"
  }
}",
      "type": "text",
    },
  ],
}
`;

exports[`move-media should move a media item to another folder 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;
